force-app/main/default/objects/NCMT_Crew_Details__c/NCMT_Crew_Details__c.object-meta.xml
<CustomObject>
    <label>NCMT Crew Details</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Crew Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Crew Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>