force-app/main/default/objects/NCMT_Crew_Details__c/fields/Crew_ID__c.field-meta.xml
<CustomField>
    <fullName>Crew_ID__c</fullName>
    <label>NCMT Crew Master</label>
    <referenceTo>NCMT_Crew_Master__c</referenceTo>
    <relationshipLabel>NCMT Crew Details</relationshipLabel>
    <relationshipName>NCMT_Crew_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>