force-app/main/default/objects/NCMT_Crew_Details__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>NCMT_Equipment__c</referenceTo>
    <relationshipName>Crew_Details</relationshipName>
    <type>Lookup</type>
</CustomField>