force-app/main/default/objects/NCMT_Crew_Details__c/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <formula>Equipment__r.Equipment_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Description</label>
    <type>Text</type>
</CustomField>