force-app/main/default/objects/NCMT_Crew_Details__c/fields/Hourly_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Labor_Rate__c</fullName>
    <formula>Labor_Resource__r.Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Labor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>