force-app/main/default/objects/NCMT_Crew_Details__c/fields/Labor_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Labor_Equipment_Type__c</fullName>
    <formula>IF(Hourly_Labor_Rate__c != 0, &apos;Labor&apos;, &apos;Equipment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor/Equipment Type</label>
    <type>Text</type>
</CustomField>