force-app/main/default/objects/NCMT_Crew_Details__c/fields/Labor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Labor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor Resource</label>
    <referenceTo>NCMT_Labor_Resource__c</referenceTo>
    <relationshipLabel>NCMT Crew Details</relationshipLabel>
    <relationshipName>Crew_Details</relationshipName>
    <type>Lookup</type>
</CustomField>