force-app/main/default/objects/NCMT_Crew_Details__c/fields/Labor_Trade__c.field-meta.xml
<CustomField>
    <fullName>Labor_Trade__c</fullName>
    <formula>Labor_Resource__r.Labor_Resource_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Description</label>
    <type>Text</type>
</CustomField>