force-app/main/default/objects/NCMT_Crew_Details__c/fields/Purchase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Rate__c</fullName>
    <formula>Equipment__r.Purchase_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>