force-app/main/default/objects/NCMT_Crew_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Crew_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Equipment__c</columns>
    <columns>Equipment_Name__c</columns>
    <columns>Labor_Resource__c</columns>
    <columns>Labor_Trade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>