force-app/main/default/objects/NCMT_Crew_Details__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>Crew_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Equipment__c</columns>
    <columns>Equipment_Name__c</columns>
    <columns>Labor_Resource__c</columns>
    <columns>Labor_Trade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY-2020</label>
</ListView>